ja/10.2/user/search-field.rst
======================
検索フィールド指定検索
======================

フィールド指定検索
==================

|Fess| でクロールした結果はタイトルや本文などの各フィールドごとに保存されています。
それらのフィールドを指定して検索することができます。
フィールドを指定して検索することで、ドキュメントの種類別やサイズ別など細かい検索条件の指定をすることができます。

利用可能なフィールド
--------------------

デフォルトでは以下のフィールドを指定して検索することができます。

+-----------------+-------------------------------------------+
| フィールド名    | 説明                                      |
+-----------------+-------------------------------------------+
| url             | クロールした URL                          |
+-----------------+-------------------------------------------+
| host            | クロールした URL に含まれていたホスト名   |
+-----------------+-------------------------------------------+
| title           | タイトル                                  |
+-----------------+-------------------------------------------+
| content         | 本文                                      |
+-----------------+-------------------------------------------+
| content_length  | クロールしたドキュメントサイズ            |
+-----------------+-------------------------------------------+
| last_modified   | クロールしたドキュメントの最終更新日時    |
+-----------------+-------------------------------------------+
| mimetype        | ドキュメントの MIME タイプ                |
+-----------------+-------------------------------------------+

表: 利用可能なフィールド一覧


フィールド指定をしていない場合は、title および content を対象に検索します。
フィールドを追加して検索対象とすることも可能です。

HTMLファイルを検索対象としている場合、titleタグがtitleフィールド、bodyタグ以下の文字列が content フィールドに登録されています。

利用方法
--------

フィールド指定検索をする場合は、「フィールド名:検索語」のようにフィールド名と検索語をコロン(:)で区切って検索フォームに入力して検索します。

titleフィールドに対して、fess
を検索語として検索する場合は以下のように入力します。

::

    title:fess

上記の検索により、titleフィールドにfessが含まれるドキュメントが検索結果として表示されます。
